# rez-qt-py

./: CMakeLists.txt  README.md  install.sh  package.py
